substituindo divs por canvas

--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
             <div class="graficos-container">
                 <div class="grafico">
                     <h3>Vendas por Mês</h3>
-                    <div class="grafico-area" id="grafico-vendas"></div>
+                    <canvas id="grafico-vendas" width="400" height="200"></canvas>
                 </div>
                 <div class="grafico">
                     <h3>Distribuição por Categoria</h3>
-                    <div class="grafico-area" id="grafico-categorias"></div>
+                    <canvas id="grafico-categorias" width="400" height="200"></canvas>
                 </div>
             </div>
         </section>
