--- a/index.html
+++ b/index.html
@@ -71,9 +71,26 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <!-- Dados serão inseridos via JavaScript -->
                     </tbody>
                 </table>
+            </div>
+            <div class="form-container">
+                <h3>Adicionar / Editar Produto</h3>
+                <form id="form-produto">
+                    <input type="hidden" id="inputId" />
+
+                    <label for="inputNome">Nome:</label>
+                    <input type="text" id="inputNome" name="nome" placeholder="Nome do produto" required />
+
+                    <label for="inputCategoria">Categoria:</label>
+                    <input type="text" id="inputCategoria" name="categoria" placeholder="Categoria" required />
+
+                    <label for="inputPreco">Preço (R$):</label>
+                    <input type="number" id="inputPreco" name="preco" step="0.01" placeholder="Preço" required />
+
+                    <button type="submit" id="btnSalvar">Salvar</button>
+                    <button type="button" id="btnCancelar" style="display:none;">Cancelar</button>
+                </form>
             </div>
         </section>
     </main>
