--- a/index.html
+++ b/index.html
@@ -74,24 +74,28 @@
                     </tbody>
                 </table>
             </div>
-            <div class="form-container">
-                <h3>Adicionar / Editar Produto</h3>
-                <form id="form-produto">
-                    <input type="hidden" id="inputId" />
-
-                    <label for="inputNome">Nome:</label>
-                    <input type="text" id="inputNome" name="nome" placeholder="Nome do produto" required />
-
-                    <label for="inputCategoria">Categoria:</label>
-                    <input type="text" id="inputCategoria" name="categoria" placeholder="Categoria" required />
-
-                    <label for="inputPreco">Preço (R$):</label>
-                    <input type="number" id="inputPreco" name="preco" step="0.01" placeholder="Preço" required />
-
-                    <button type="submit" id="btnSalvar">Salvar</button>
-                    <button type="button" id="btnCancelar" style="display:none;">Cancelar</button>
-                </form>
+        </section>
+        <section id="crud" class="painel">
+        <h2>Cadastro de Produtos</h2>
+        <form id="form-produto">
+            <input type="hidden" id="input-id" />
+            <div>
+            <label for="input-nome">Nome:</label>
+            <input type="text" id="input-nome" required />
             </div>
+            <div>
+            <label for="input-categoria">Categoria:</label>
+            <input type="text" id="input-categoria" required />
+            </div>
+            <div>
+            <label for="input-preco">Preço:</label>
+            <input type="number" id="input-preco" step="0.01" required />
+            </div>
+            <div class="botoes">
+            <button type="submit">Salvar</button>
+            <button type="button" id="btn-cancelar" style="display: none;">Cancelar</button>
+            </div>
+        </form>
         </section>
     </main>
 
