adicionando o cadastro de produtos na header

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <li><a href="#visao-geral">Visão Geral</a></li>
                 <li><a href="#graficos">Gráficos</a></li>
                 <li><a href="#tabelas">Tabelas</a></li>
-                <li><a href="#configuracoes">Configurações</a></li>
+                <li><a href="#crud">Cadastro de Produtos</a></li>
             </ul>
         </nav>
     </header>
